--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,8 +25,13 @@ spring:
     static-locations: classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${app.upload.path}
 
 app:
-  register:
-    status: true
+  user:
+    register: true
+    login: true
+
+  token:
+    key: apihubkey
+
   smtp:
     host: smtp.microwarp.com
     port: 25
