--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,9 +13,7 @@ spring:
     default-property-inclusion: non_null
   data:
     mongodb:
-      database: apihub
-      host: localhost
-      port: 27017
+      uri: mongodb://test:123456@localhost:27017/apihub
   http:
     multipart:
       max-file-size: 5000mb
